--- a/escorts_directory/Views/Shared/NotFound.cshtml
+++ b/escorts_directory/Views/Shared/NotFound.cshtml
@@ -1,13 +1,13 @@
 ﻿@model ErrorViewModel
 @{
-    ViewData["Title"] = "Error";
+	ViewData["Title"] = "Error";
 }
 
 <partial name="_Header" />
 
 <section class="innerPage_headerBG" style="background:url('@Url.Content("~/images/bg_img/3.jpg")') center center;">
 	<div class="container">
-		<h1>Something went wrong</h1>
+		<h1>404</h1>
 
 	</div>
 	<div class="sliderBanner_Overlay"></div>
@@ -20,7 +20,7 @@
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="col-lg-8">
-						<h2>Something went wrong</h2>
+						<h2>404 This page does not exist </h2>
 					</div>
 				</div>
 			</div>
