--- a/escorts_directory/Views/Shared/_Layout.cshtml
+++ b/escorts_directory/Views/Shared/_Layout.cshtml
@@ -168,10 +168,10 @@
 									<li><a href="#">Videos</a></li>
 									<li><a href="#">FAQ</a></li>
 									<li><a href="#">Reviews</a></li>
-									<li><a asp-controller="Home" asp-action="contact_us">Contact</a></li>
+									<li><a href="/about_us">About Us</a></li>
 									<li><a href="#">Terms & Privacy</a></li>
-									<li><a asp-controller="Home" asp-action="terminology">Terminology</a></li>
-									<li><a asp-controller="Home" asp-action="etiquette">Etiquette</a></li>
+									<li><a href="/terminology">Terminology</a></li>
+									<li><a href="/etiquette">Etiquette</a></li>
 								</ul>
 
 								<div class="ft_desclaimer">
