--- a/escorts_directory/Views/Shared/_Layout_Profile.cshtml
+++ b/escorts_directory/Views/Shared/_Layout_Profile.cshtml
@@ -138,10 +138,10 @@
 									<li><a href="~/#">Videos</a></li>
 									<li><a href="~/#">FAQ</a></li>
 									<li><a href="~/#">Reviews</a></li>
-									<li><a href="~/#">Contact</a></li>
-									<li><a href="~/#">Terms & Privacy</a></li>
-									<li><a href="~/#">Directory</a></li>
-									<li><a href="~/#">Affiliate</a></li>
+									<li><a href="/about_us">About Us</a></li>
+									<li><a href="#">Terms & Privacy</a></li>
+									<li><a href="/terminology">Terminology</a></li>
+									<li><a href="/etiquette">Etiquette</a></li>
 								</ul>
 
 								<div class="ft_desclaimer">
