--- a/escorts_directory/Views/Shared/_Nav.cshtml
+++ b/escorts_directory/Views/Shared/_Nav.cshtml
@@ -99,7 +99,7 @@
 						<li><a href="#">Georgia</a></li>
 					</ul>
 				</li> *@
-				<li><a asp-controller="Home" asp-action="about_us"><i class="fa fa-heart"></i><span>ABOUT US</span></a></li>
+				<li><a href="/about_us"><i class="fa fa-heart"></i><span>ABOUT US</span></a></li>
 				<li class="dropdown has-mega-menu">
 					<a href="javascript:void(0)"><i class="fa fa-search"></i><span>SEARCH</span></a>
 					<div class="mega-menu search-panel" data-width="1110px">
