--- a/escorts_directory/Views/Home/ModelProfile.cshtml
+++ b/escorts_directory/Views/Home/ModelProfile.cshtml
@@ -270,7 +270,10 @@
                         {
                             <div class="modelPhoto photoWith_review largeHeight">
                                 <figure class="modelPhoto-image-container">
-                                    <a href="@Url.Action("model_profile", "Home", new { id = escort.Escort.Id })" class="modelPhoto-image">
+                                    <a asp-action="ModelProfile"
+                                       asp-controller="Home"
+                                       asp-route-city="@escort.Escort.LocationCity.ToLower().Replace(" ", "-")"
+                                       asp-route-name="@escort.Escort.Name.ToLower().Replace(" ", "-")" class="modelPhoto-image">
                                         <img src="@escort.PhotoUrl" alt="@escort.Escort.Name">
                                     </a>
                                 </figure>
@@ -287,7 +290,12 @@
                                                 <li>Hair colour: @escort.Escort.HairColor</li>
                                                 <li>Eye colour: @escort.Escort.Eyes</li>
                                             </ul>
-                                            <a href="@Url.Action("model_profile", "Home", new { id = escort.Escort.Id })">Profile</a>
+                                            <a asp-action="ModelProfile"
+                                               asp-controller="Home"
+                                               asp-route-city="@escort.Escort.LocationCity.ToLower().Replace(" ", "-")"
+                                               asp-route-name="@escort.Escort.Name.ToLower().Replace(" ", "-")">
+                                                @escort.Escort.Name
+                                            </a>
                                         </div>
                                     </div>
                                 </div>
