--- a/escorts_directory/Views/Shared/Components/SearchForm/SearchForm.cshtml
+++ b/escorts_directory/Views/Shared/Components/SearchForm/SearchForm.cshtml
@@ -21,7 +21,7 @@
 				</select>
 			</div>
 		</div>
-		<div class="form-group column col-lg-3 col-md-3 col-sm-12">
+		@* <div class="form-group column col-lg-3 col-md-3 col-sm-12">
 			<div class="form-group">
 				<select class="customField_design" type="searchGender" name="SelectedGender">
                 <option value="">Gender</option>
@@ -31,7 +31,7 @@
                 }
 				</select>
 			</div>
-		</div>
+		</div> *@
 		<div class="form-group column col-lg-3 col-md-3 col-sm-12">
 			<div class="form-group searchBtnVisible">
 				<button type="submit" class="searchBtn"><i class="fa fa-search"></i> Find</button>
