--- a/escorts_directory/Views/Home/ModelProfile.cshtml
+++ b/escorts_directory/Views/Home/ModelProfile.cshtml
@@ -98,7 +98,7 @@
                                     </div>
 
                                     <div class="row">
-                                        <div class="col-lg-6">
+                                        @* <div class="col-lg-6">
                                             <!--Phone-->
                                             <div class="personalCharacteristic_Info modelBooking_info phoneEmailStyle contactInfo_block">
                                                 <div class="BlockIcon">
@@ -114,7 +114,7 @@
                                                     </ul>
                                                 </div>
                                             </div>
-                                        </div>
+                                        </div> *@
 
                                         <div class="col-lg-6">
                                             <div class="profileContactBtn phoneEmailStyle">
@@ -128,7 +128,7 @@
                                             </div>
                                         </div>
 
-                                        <div class="col-lg-6 d-none">
+                                        @* <div class="col-lg-6 d-none">
                                             <!--Email-->
                                             <div class="personalCharacteristic_Info modelBooking_info phoneEmailStyle d-none">
                                                 <div class="BlockIcon">
@@ -155,7 +155,7 @@
                                                     </ul>
                                                 </div>
                                             </div>
-                                        </div>
+                                        </div> *@
                                     </div>
                                     <div class="row d-none">
                                         <div class="col-lg-6">
@@ -261,7 +261,7 @@
         <div class="featuresModle_bgOverlay">
             <div class="container">
                 <div class="sectionTitle_block text_align_center">
-                    <h2>Recommanded Escorts</h2>
+                    <h2>Recommended Escorts</h2>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                 </div>
                 <div class="carousel-section">
