--- a/escorts_directory/Views/Shared/_Layout.cshtml
+++ b/escorts_directory/Views/Shared/_Layout.cshtml
@@ -158,7 +158,7 @@
 						<div class="col-lg-10 col-xl-10">
 							<div class="ftLink_section">
 								<ul>
-									<li><a href="#">VIP Escorts</a></li>
+									@* <li><a href="#">VIP Escorts</a></li>
 									<li><a href="#">Girls</a></li>
 									<li><a href="#">Pornstars</a></li>
 									<li><a href="#">City tour</a></li>
@@ -167,9 +167,9 @@
 									<li><a href="#">Independent</a></li>
 									<li><a href="#">Videos</a></li>
 									<li><a href="#">FAQ</a></li>
-									<li><a href="#">Reviews</a></li>
+									<li><a href="#">Reviews</a></li> *@
 									<li><a href="/about_us">About Us</a></li>
-									<li><a href="#">Terms & Privacy</a></li>
+									@* <li><a href="#">Terms & Privacy</a></li> *@
 									<li><a href="/terminology">Terminology</a></li>
 									<li><a href="/etiquette">Etiquette</a></li>
 								</ul>
@@ -191,6 +191,7 @@
 	</div>
 
 
+
 	<!--(necessary JavaScript plugins)============================ -->
 	<script src="~/js/jquery-3.5.1.min.js"></script>
 	<script src="~/js/popper.min.js"></script>
@@ -204,6 +205,14 @@
 
 	<script src="~/js/pixa_script.js"></script>
     @RenderSection("Scripts", required: false)
+
+
+
+
+
+
+
+
 
 </body>
 </html>
