--- a/escorts_directory/Views/Shared/_Nav.cshtml
+++ b/escorts_directory/Views/Shared/_Nav.cshtml
@@ -64,30 +64,7 @@
 									<li><a href="/@Slug("California")/@Slug("Sacramento")">Oklahoma</a></li> *@
 								</ul>
 							</div>
-							@* <div class="column col-lg-2 col-md-2 col-sm-12">
-								<ul>
-									<li><a href="#">Oregon</a></li>
-									<li><a href="#">Pennsylvania</a></li>
-									<li><a href="#">Puerto Rico</a></li>
-									<li><a href="#">Rhode Island</a></li>
-									<li><a href="#">South Carolina</a></li>
-									<li><a href="#">South Dakota</a></li>
-									<li><a href="#">Tennessee</a></li>
-									<li><a href="#">Texas</a></li>
-									<li><a href="#">Utah</a></li>
-								</ul>
-							</div>
-							<div class="column col-lg-2 col-md-2 col-sm-12">
-								<ul>
-									<li><a href="#">Vermont</a></li>
-									<li><a href="#">Virginia</a></li>
-									<li><a href="#">Washington</a></li>
-									<li><a href="#">Washington DC</a></li>
-									<li><a href="#">West Virginia</a></li>
-									<li><a href="#">Wisconsin</a></li>
-									<li><a href="#">Wyoming</a></li>
-								</ul>
-							</div> *@
+							
 						</div>
 					</div>
 				</li>
@@ -100,23 +77,28 @@
 					</ul>
 				</li> *@
 				<li><a href="/about_us"><i class="fa fa-heart"></i><span>ABOUT US</span></a></li>
-				<li class="dropdown has-mega-menu">
-					<a href="javascript:void(0)"><i class="fa fa-search"></i><span>SEARCH</span></a>
-					<div class="mega-menu search-panel" data-width="1110px">
-						<div class="mega-menu-bar">
-							<div Class="filterSearch_field">
-								@await Component.InvokeAsync("SearchForm")
 
-								
+
+				<li class="dropdown has-mega-menu" id="searchMenu">
+					<a href="javascript:void(0)"><i class="fa fa-search"></i><span>SEARCH</span></a>
+					<div class="mega-menu search-panel" id="searchPanel" data-width="1110px">
+						<div class="mega-menu-bar">
+							<div class="filterSearch_field">
+								@await Component.InvokeAsync("SearchForm")
 							</div>
 						</div>
 					</div>
 				</li>
+
+				
+
+
                 @* <li><a href="#"><i class="fa fa-user"></i><span>MEMBERS</span></a></li> *@
 			</ul>
 		</div>
 	</nav>
 	<!-- Main Menu End-->
 </div>
+
 
 
