--- a/escorts_directory/Views/Shared/_Header.cshtml
+++ b/escorts_directory/Views/Shared/_Header.cshtml
@@ -1,4 +1,5 @@
-﻿<!-- Header Combo-->
+﻿
+<!-- Header Combo-->
 <header class="header_section header_section_combo comboHeaderNav_StyleTopBottomCenter defaultStyle">
 	<!--Navigation header_wrap -->
 	<div class="header_wrap">
@@ -26,7 +27,7 @@
 			<div class="Header_logo"><a asp-action="index"><img src="~/img/main_logo.png" alt="" title="" /></a></div>
 			<div class="headerRight_ActionBtn">
 				<div class="headerBtn_block">
-					<button type="button" class="search-btn"><i class="fa fa-search"></i><span></span></button>
+					@* <button type="button" class="search-btn"><i class="fa fa-search"></i><span></span></button> *@
 				</div>
 			</div>
 		</div>
@@ -56,7 +57,7 @@
 		</div>
 	</div><!-- End Mobile Menu -->
 	<!-- Header Search -->
-	<div class="search-popup">
+@* 	<div class="search-popup">
 		<span class="search-back-drop"></span>
 		<div class="search-inner">
 			<div class="container">
@@ -66,30 +67,30 @@
 				</div>
 
 				<div Class="filterSearch_field">
-					<form method="post" action="">
-						<div class="form-group">
-							<select class="customField_design" type="selectState" name="search-state">
-								<option value="0">Select State</option>
-								<option value="1">Los Angles</option>
-								<option value="2">Naveda</option>
-							</select>
-						</div>
+					<form method="get" asp-controller="Search" asp-action="Index" id="searchForm">
 
 						<div class="form-group">
-							<select class="customField_design" type="selectCity" name="search-city">
-								<option value="0">Select City</option>
-								<option value="1">Las Vegas</option>
-								<option value="2">Henderson</option>
+							<select class="customField_design" type="selectState" name="SelectedState">
+								<option value="">State</option>
+								@foreach (var state in Model.States)
+								{
+									<option value="@state">@state</option>
+								}
 							</select>
-						</div>
 
 						<div class="form-group">
+								<select class="customField_design" type="selectCity" name="SelectedCity">
+									<option value="">City</option>
+								</select>
+						</div>
+						
+						 <div class="form-group">
 							<select class="customField_design" type="searchGender" name="search-gender">
 								<option value="0">Select Gender</option>
 								<option value="1">Male</option>
 								<option value="2">Female</option>
 							</select>
-						</div>
+						</div> 
 
 						<div class="form-group searchBtnVisible">
 							<button type="submit" class="searchBtn"><i class="fa fa-search"></i> Find</button>
@@ -99,6 +100,8 @@
 			</div>
 		</div>
 	</div>
-	<!-- End Header Search -->
+ *@	
+ <!-- End Header Search -->
 </header>
 <!--End Main Header -->
+
