--- a/escorts_directory/Views/Shared/_Layout_Profile.cshtml
+++ b/escorts_directory/Views/Shared/_Layout_Profile.cshtml
@@ -128,7 +128,7 @@
 						<div class="col-lg-10 col-xl-10">
 							<div class="ftLink_section">
 								<ul>
-									<li><a href="~/#">VIP Escorts</a></li>
+									@* <li><a href="~/#">VIP Escorts</a></li>
 									<li><a href="~/#">Girls</a></li>
 									<li><a href="~/#">Pornstars</a></li>
 									<li><a href="~/#">City tour</a></li>
@@ -137,9 +137,9 @@
 									<li><a href="~/#">Independent</a></li>
 									<li><a href="~/#">Videos</a></li>
 									<li><a href="~/#">FAQ</a></li>
-									<li><a href="~/#">Reviews</a></li>
+									<li><a href="~/#">Reviews</a></li> *@
 									<li><a href="/about_us">About Us</a></li>
-									<li><a href="#">Terms & Privacy</a></li>
+									@* <li><a href="#">Terms & Privacy</a></li> *@
 									<li><a href="/terminology">Terminology</a></li>
 									<li><a href="/etiquette">Etiquette</a></li>
 								</ul>
