--- a/escorts_directory/Views/Shared/_Nav.cshtml
+++ b/escorts_directory/Views/Shared/_Nav.cshtml
@@ -1,103 +1,103 @@
 @functions {
-	public string Slug(string input) => input?.ToLower().Replace(" & ", " and ").Replace(" ", "-");
+    public string Slug(string input) => input?.ToLower().Replace(" & ", " and ").Replace(" ", "-");
 }
 
 <!--Nav Box-->
 <div class="nav-outer">
-	<!-- Main Menu -->
-	<nav class="navigation_combo navbar-expand-md navbar-light">
-		<div class="collapse navbar-collapse" id="navbarSupportedContent">
-			<ul class="nav_multilabel clearfix">
-				<li class="dropdown has-mega-menu">
-					<a href="javascript:void(0)"><i class="fa fa-map-marker"></i><span>LOCATIONS</span></a>
-					<div class="mega-menu" data-width="1110px">
-						<div class="mega-menu-bar row">
-							<div class="column col-lg-2 col-md-2 col-sm-12">
-								<ul>
-									<li><a href="/@Slug("New Mexico")/@Slug("Albuquerque")">Albuquerque</a></li>
-									<li><a href="/@Slug("Georgia")/@Slug("Atlanta")">Atlanta</a></li>
-									<li><a href="/@Slug("Texas")/@Slug("Austin")">Austin</a></li>
-									<li><a href="/@Slug("Maryland")/@Slug("Baltimore")">Baltimore</a></li>
-									<li><a href="/@Slug("Massachusetts")/@Slug("Boston")">Boston</a></li>
-									<li><a href="/@Slug("North Carolina")/@Slug("Charlotte")">Charlotte</a></li>
-									<li><a href="/@Slug("Illinois")/@Slug("Chicago")">Chicago</a></li>
-									<li><a href="/@Slug("Ohio")/@Slug("Columbus")">Columbus</a></li>
-									<li><a href="/@Slug("Texas")/@Slug("Dallas")">Dallas</a></li>
-								</ul>
-							</div>
-							<div class="column col-lg-2 col-md-2 col-sm-12">
-								<ul>
-									<li><a href="/@Slug("Colorado")/@Slug("Denver")">Denver</a></li>
-									<li><a href="/@Slug("Michigan")/@Slug("Detroit")">Detroit</a></li>
-									<li><a href="/@Slug("Texas")/@Slug("El Paso")">El Paso</a></li>
-									<li><a href="/@Slug("Texas")/@Slug("Fort Worth")">Fort Worth</a></li>
-									<li><a href="/@Slug("California")/@Slug("Fresno")">Fresno</a></li>
-									<li><a href="/@Slug("Texas")/@Slug("Houston")">Houston</a></li>
-									<li><a href="/@Slug("Indiana")/@Slug("Indianapolis")">Indianapolis</a></li>
-									<li><a href="/@Slug("Florida")/@Slug("Jacksonville")">Jacksonville</a></li>
-									<li><a href="/@Slug("Nevada")/@Slug("Las Vegas")">Las Vegas</a></li>
-								</ul>
-							</div>
-							<div class="column col-lg-2 col-md-2 col-sm-12">
-								<ul>
-									<li><a href="/@Slug("California")/@Slug("Los Angeles")">Los Angeles</a></li>
-									<li><a href="/@Slug("Tennessee")/@Slug("Memphis")">Memphis</a></li>
-									<li><a href="/@Slug("Tennessee")/@Slug("Nashville")">Nashville</a></li>
-									<li><a href="/@Slug("New York")/@Slug("New York City")">New York City</a></li>
-									<li><a href="/@Slug("Oklahoma")/@Slug("Oklahoma City")">Oklahoma City</a></li>
-									<li><a href="/@Slug("Pennsylvania")/@Slug("Philadelphia")">Philadelphia</a></li>
-									<li><a href="/@Slug("Arizona")/@Slug("Phoenix")">Phoenix</a></li>
-									<li><a href="/@Slug("Oregon")/@Slug("Portland")">Portland</a></li>
-									<li><a href="/@Slug("California")/@Slug("Sacramento")">Sacramento</a></li>
-								</ul>
-							</div>
-							<div class="column col-lg-2 col-md-2 col-sm-12">
-								<ul>
-									<li><a href="/@Slug("Texas")/@Slug("San Antonio")">San Antonio</a></li>
-									<li><a href="/@Slug("California")/@Slug("San Diego")">San Diego</a></li>
-									<li><a href="/@Slug("California")/@Slug("San Francisco")">San Francisco</a></li>
-									<li><a href="/@Slug("California")/@Slug("San Jose")">San Jose</a></li>
-									<li><a href="/@Slug("Washington")/@Slug("Seattle")">Seattle</a></li>
-									<li><a href="/@Slug("Arizona")/@Slug("Tucson")">Tucson</a></li>
-									<li><a href="/@Slug("District of Columbia")/@Slug("Washington, D.C.")">Washington, D.C.</a></li>
-									@* <li><a href="/@Slug("California")/@Slug("Sacramento")">Ohio</a></li>
-									<li><a href="/@Slug("California")/@Slug("Sacramento")">Oklahoma</a></li> *@
-								</ul>
-							</div>
-							
-						</div>
-					</div>
-				</li>
-				@* <li class="dropdown">
-					<a href="javascript:void(0)"><i class="fa fa-th-large"></i><span>CATEGORIES</span></a>
-					<ul>
-						<li><a href="#">Escorts</a></li>
-						<li><a href="#">Dalas</a></li>
-						<li><a href="#">Georgia</a></li>
-					</ul>
-				</li> *@
-				<li><a href="/about_us"><i class="fa fa-heart"></i><span>ABOUT US</span></a></li>
+    <!-- Main Menu -->
+    <nav class="navigation_combo navbar-expand-md navbar-light">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="nav_multilabel clearfix">
+                <li class="dropdown has-mega-menu" id="locationsDropdown">
+                    <a href="javascript:void(0)"><i class="fa fa-map-marker"></i><span>LOCATIONS</span></a>
+                    <div class="mega-menu" id="megaMenuLocations" data-width="1110px">
+                        <div class="mega-menu-bar row">
+                            <div class="column col-lg-2 col-md-2 col-sm-12">
+                                <ul>
+                                    <li><a href="/@Slug("New Mexico")/@Slug("Albuquerque")">Albuquerque</a></li>
+                                    <li><a href="/@Slug("Georgia")/@Slug("Atlanta")">Atlanta</a></li>
+                                    <li><a href="/@Slug("Texas")/@Slug("Austin")">Austin</a></li>
+                                    <li><a href="/@Slug("Maryland")/@Slug("Baltimore")">Baltimore</a></li>
+                                    <li><a href="/@Slug("Massachusetts")/@Slug("Boston")">Boston</a></li>
+                                    <li><a href="/@Slug("North Carolina")/@Slug("Charlotte")">Charlotte</a></li>
+                                    <li><a href="/@Slug("Illinois")/@Slug("Chicago")">Chicago</a></li>
+                                    <li><a href="/@Slug("Ohio")/@Slug("Columbus")">Columbus</a></li>
+                                    <li><a href="/@Slug("Texas")/@Slug("Dallas")">Dallas</a></li>
+                                </ul>
+                            </div>
+                            <div class="column col-lg-2 col-md-2 col-sm-12">
+                                <ul>
+                                    <li><a href="/@Slug("Colorado")/@Slug("Denver")">Denver</a></li>
+                                    <li><a href="/@Slug("Michigan")/@Slug("Detroit")">Detroit</a></li>
+                                    <li><a href="/@Slug("Texas")/@Slug("El Paso")">El Paso</a></li>
+                                    <li><a href="/@Slug("Texas")/@Slug("Fort Worth")">Fort Worth</a></li>
+                                    <li><a href="/@Slug("California")/@Slug("Fresno")">Fresno</a></li>
+                                    <li><a href="/@Slug("Texas")/@Slug("Houston")">Houston</a></li>
+                                    <li><a href="/@Slug("Indiana")/@Slug("Indianapolis")">Indianapolis</a></li>
+                                    <li><a href="/@Slug("Florida")/@Slug("Jacksonville")">Jacksonville</a></li>
+                                    <li><a href="/@Slug("Nevada")/@Slug("Las Vegas")">Las Vegas</a></li>
+                                </ul>
+                            </div>
+                            <div class="column col-lg-2 col-md-2 col-sm-12">
+                                <ul>
+                                    <li><a href="/@Slug("California")/@Slug("Los Angeles")">Los Angeles</a></li>
+                                    <li><a href="/@Slug("Tennessee")/@Slug("Memphis")">Memphis</a></li>
+                                    <li><a href="/@Slug("Tennessee")/@Slug("Nashville")">Nashville</a></li>
+                                    <li><a href="/@Slug("New York")/@Slug("New York City")">New York City</a></li>
+                                    <li><a href="/@Slug("Oklahoma")/@Slug("Oklahoma City")">Oklahoma City</a></li>
+                                    <li><a href="/@Slug("Pennsylvania")/@Slug("Philadelphia")">Philadelphia</a></li>
+                                    <li><a href="/@Slug("Arizona")/@Slug("Phoenix")">Phoenix</a></li>
+                                    <li><a href="/@Slug("Oregon")/@Slug("Portland")">Portland</a></li>
+                                    <li><a href="/@Slug("California")/@Slug("Sacramento")">Sacramento</a></li>
+                                </ul>
+                            </div>
+                            <div class="column col-lg-2 col-md-2 col-sm-12">
+                                <ul>
+                                    <li><a href="/@Slug("Texas")/@Slug("San Antonio")">San Antonio</a></li>
+                                    <li><a href="/@Slug("California")/@Slug("San Diego")">San Diego</a></li>
+                                    <li><a href="/@Slug("California")/@Slug("San Francisco")">San Francisco</a></li>
+                                    <li><a href="/@Slug("California")/@Slug("San Jose")">San Jose</a></li>
+                                    <li><a href="/@Slug("Washington")/@Slug("Seattle")">Seattle</a></li>
+                                    <li><a href="/@Slug("Arizona")/@Slug("Tucson")">Tucson</a></li>
+                                    <li><a href="/@Slug("District of Columbia")/@Slug("Washington, D.C.")">Washington, D.C.</a></li>
+                                    @* <li><a href="/@Slug("California")/@Slug("Sacramento")">Ohio</a></li>
+                        <li><a href="/@Slug("California")/@Slug("Sacramento")">Oklahoma</a></li> *@
+                                </ul>
+                            </div>
+
+                        </div>
+                    </div>
+                </li>
+                @* <li class="dropdown">
+                        <a href="javascript:void(0)"><i class="fa fa-th-large"></i><span>CATEGORIES</span></a>
+                        <ul>
+                            <li><a href="#">Escorts</a></li>
+                            <li><a href="#">Dalas</a></li>
+                            <li><a href="#">Georgia</a></li>
+                        </ul>
+                    </li> *@
+                <li><a href="/about_us"><i class="fa fa-heart"></i><span>ABOUT US</span></a></li>
 
 
-				<li class="dropdown has-mega-menu" id="searchMenu">
-					<a href="javascript:void(0)"><i class="fa fa-search"></i><span>SEARCH</span></a>
-					<div class="mega-menu search-panel" id="searchPanel" data-width="1110px">
-						<div class="mega-menu-bar">
-							<div class="filterSearch_field">
-								@await Component.InvokeAsync("SearchForm")
-							</div>
-						</div>
-					</div>
-				</li>
+                <li class="dropdown has-mega-menu" id="searchMenu">
+                    <a href="javascript:void(0)"><i class="fa fa-search"></i><span>SEARCH</span></a>
+                    <div class="mega-menu search-panel" id="searchPanel" data-width="1110px">
+                        <div class="mega-menu-bar">
+                            <div class="filterSearch_field">
+                                @await Component.InvokeAsync("SearchForm")
+                            </div>
+                        </div>
+                    </div>
+                </li>
 
-				
+
 
 
                 @* <li><a href="#"><i class="fa fa-user"></i><span>MEMBERS</span></a></li> *@
-			</ul>
-		</div>
-	</nav>
-	<!-- Main Menu End-->
+            </ul>
+        </div>
+    </nav>
+    <!-- Main Menu End-->
 </div>
 
 
